# Detect-Screen-GPU-With-OpenCL

./: CMakeLists.txt  main.cpp
